feat: 모임 모집 상태 자동 관리 및 정원 관리 기능 구현
- 모임 신청 시 현재 인원수(currentCount) 자동 증가
- 정원 초과 및 모집 마감일 검증 로직 추가
- 모집 마감일 지난 모임 자동 상태 변경 스케줄러 구현

Changes:
* Meeting 엔티티에 비즈니스 로직 메서드 추가
  - incrementCurrentCount(): 현재 인원수 증가
  - updateStatusToFinished(): 모집 완료 상태 변경
  - isRecruitmentClosed(): 모집 마감 여부 확인

* MeetingService.joinMeeting() 개선
  - 모집 마감일 검증 추가
  - 정원 확인 후 currentCount 자동 증가
  - 정원 초과 또는 마감일 도달 시 상태 자동 변경

* MeetingScheduler 추가 (매일 00:00 실행)
  - 모집 마감일 지난 모임 일괄 상태 변경
  - 신청이 없는 모임도 자동 처리

* DoktoriBackendApplication에 @EnableScheduling 추가